[project]
name = "til"
version = "0.1.0"
description = ""
authors = [
    {name = "sotthang",email = "sotthang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.12,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
